fixed overflow on mobile!!! (probably)

--- a/css/creative.css
+++ b/css/creative.css
@@ -56,6 +56,7 @@ html {
   scrollbar-width: none;  /* Hide scrollbar for Firefox */
   
   -webkit-font-smoothing: antialiased;
+  overflow-x: hidden;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
